# webclone

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  GUI_QUICKSTART.md  MCP_QUICKSTART.md  Makefile  README.md  Run  TRANSFORMATION_SUMMARY.md  download.py  pyproject.toml  ui.py  webclone-gui.py  webclone-mcp.py  webmirror-gui.bat  webmirror-gui.py  webmirror-mcp.py
.github/: release.yaml
.github/workflows/: ci.yml
cookies/: README.md
docs/: AUTHENTICATION_GUIDE.md  GUI_GUIDE.md  MCP_GUIDE.md  QUICK_REFERENCE.md
examples/: README.md  authenticated_crawl.py
src/webclone/: __init__.py  cli.py
src/webclone/core/: __init__.py  crawler.py  downloader.py
src/webclone/gui/: __init__.py  streamlit_app.py  tkinter_app.py
src/webclone/mcp/: __init__.py  server.py
src/webclone/models/: __init__.py  config.py  metadata.py
src/webclone/services/: __init__.py  selenium_service.py
src/webclone/utils/: __init__.py  helpers.py  logger.py
src/webmirror/: __init__.py  cli.py
src/webmirror/core/: __init__.py  crawler.py  downloader.py
src/webmirror/gui/: __init__.py  streamlit_app.py  tkinter_app.py
src/webmirror/mcp/: __init__.py  server.py
src/webmirror/models/: __init__.py  config.py
src/webmirror/services/: __init__.py  selenium_service.py
src/webmirror/utils/: __init__.py  logger.py
tests/: __init__.py  test_helpers.py  test_models.py
