[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webmirror"
version = "1.0.0"
description = "A blazingly fast, async-first website cloning engine that preserves everything"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Ruslan Magana", email = "contact@ruslanmv.com" }]
keywords = [
    "web-scraping",
    "website-cloner",
    "async",
    "selenium",
    "archival",
    "mirror",
    "crawler",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.18.0",
    "webdriver-manager>=4.0.0",
    "lxml>=5.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
    "types-aiofiles>=23.2.0",
    "types-beautifulsoup4>=4.12.0",
    "bandit>=1.7.0",
]
gui = [
    "streamlit>=1.32.0",
    "streamlit-option-menu>=0.3.12",
    "plotly>=5.20.0",
]

[project.scripts]
webmirror = "webmirror.cli:app"
webmirror-gui = "streamlit run src/webmirror/gui/streamlit_app.py"

[project.urls]
Homepage = "https://github.com/ruslanmv/webmirror"
Documentation = "https://ruslanmv.com/webmirror"
Repository = "https://github.com/ruslanmv/webmirror"
Issues = "https://github.com/ruslanmv/webmirror/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/webmirror"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["ARG", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = """
    -v
    --tb=short
    --cov=src/webmirror
    --cov-report=term-missing
    --cov-report=html
"""

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
